# CppSerialization

./: CMakeLists.txt  README.md  SerializeBase.cpp  SerializeBase.h  SerializeConverters.h  SerializeException.h  main.cpp  serialized_object.xml
src/example1/: example1.cpp
src/lib/: CppSerialization.cpp
src/lib/export/: CppSerialization.h
